--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
   },
   "require-dev": {
     "doctrine/collections": "^1.5",
-    "symfony/phpunit-bridge": "^5.1",
-    "phpunit/phpunit": "^8.3"
+    "symfony/phpunit-bridge": "^5.1"
   },
   "autoload": {
     "psr-4": {
